src/test/deca/context/invalid/provided/testi08.deca
class X{
    boolean is_int(){}
}
class Y extends X{
    int is_int(){}
}